...
        }
    }
    
    //MARK: -- SharingDelegate
    func sharer(_ sharer: Sharing, didCompleteWithResults results: [String : Any]) {
        if sharer.shareContent.pageID != nil {
            print("success")
        }
    }
    func sharer(_ sharer: Sharing, didFailWithError error: Error) {
        print(error)
        print("fail")
    }
...
